--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-    "name": "node-module-middleware",
-    "version": "0.1.0",
-    "description": "gfk-e middleware utilities etc.",
-    "main": "index.js",
-    "scripts": {
-        "build": "node_modules/.bin/babel --babelrc .babelrc src --out-dir dist",
-        "test": "node_modules/.bin/mocha"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:gfke/node-module-middleware.git"
-    },
-    "license": "WTFPL",
-    "bugs": {
-        "url": "https://github.com/gfke/node-module-middleware/issues"
-    },
-    "homepage": "https://github.com/gfke/node-module-middleware",
-    "engines": {
-        "node": "5.2.0"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.1.1",
-        "co-mocha": "^1.1.2",
-        "mocha": "^2.3.4",
-        "mockery": "^1.4.0",
-        "nock": "^3.4.0",
-        "should": "^8.1.1",
-        "source-map-support": "^0.3.3"
-    },
-    "dependencies": {
-        "babel-preset-es2015-node5": "^1.0.0",
-        "babel-register": "^6.3.13",
-        "bluebird": "^3.0.5",
-        "bunyan": "^1.5.1",
-        "bunyan-prettystream": "^0.1.3",
-        "bunyan-raven": "^0.4.0",
-        "co": "^4.6.0",
-        "http-errors": "^1.3.1",
-        "join-path": "^1.1.0",
-        "lodash": "^3.10.1",
-        "lru-cache": "^2.7.0",
-        "raven": "^0.8.1",
-        "request-promise": "^1.0.2",
-        "socket.io-client": "^1.3.7"
-    }
+  "name": "node-module-middleware",
+  "version": "0.1.0",
+  "description": "gfk-e middleware utilities etc.",
+  "main": "./lib/index.js",
+  "scripts": {
+    "build": "node_modules/.bin/babel --babelrc .babelrc src --out-dir lib",
+    "test": "node_modules/.bin/mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:gfke/node-module-middleware.git"
+  },
+  "license": "WTFPL",
+  "bugs": {
+    "url": "https://github.com/gfke/node-module-middleware/issues"
+  },
+  "homepage": "https://github.com/gfke/node-module-middleware",
+  "engines": {
+    "node": "5.2.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.1.1",
+    "co-mocha": "^1.1.2",
+    "mocha": "^2.3.4",
+    "mockery": "^1.4.0",
+    "nock": "^3.4.0",
+    "should": "^8.1.1",
+    "source-map-support": "^0.3.3"
+  },
+  "dependencies": {
+    "babel-preset-es2015-node5": "^1.0.0",
+    "babel-register": "^6.3.13",
+    "bluebird": "^3.0.5",
+    "bunyan": "^1.5.1",
+    "bunyan-prettystream": "^0.1.3",
+    "bunyan-raven": "^0.4.0",
+    "co": "^4.6.0",
+    "http-errors": "^1.3.1",
+    "join-path": "^1.1.0",
+    "lodash": "^3.10.1",
+    "lru-cache": "^2.7.0",
+    "raven": "^0.8.1",
+    "request-promise": "^1.0.2",
+    "socket.io-client": "^1.3.7"
+  }
 }
