--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "co": "^4.6.0",
     "http-errors": "^1.3.1",
     "join-path": "^1.1.0",
+    "koa-bunyan-logger": "^1.3.0",
     "lodash": "^3.10.1",
     "lru-cache": "^2.7.0",
     "raven": "^0.8.1",
