--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "gfk-e support with utilities, services and middlewares etc.",
   "main": "index.js",
   "scripts": {
+    "build": "node_modules/.bin/babel --babelrc .babelrc src --out-dir lib",
+    "pretest": "npm run build",
     "test": "node_modules/.bin/mocha"
   },
   "repository": {
@@ -19,6 +21,9 @@
     "node": ">=4.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-preset-es2015-node5": "^1.1.2",
+    "babel-register": "^6.4.3",
     "co-mocha": "^1.1.2",
     "mocha": "^2.3.4",
     "mockery": "^1.4.0",
@@ -32,11 +37,13 @@
     "bunyan-prettystream": "^0.1.3",
     "bunyan-raven": "^0.4.0",
     "co": "^4.6.0",
+    "graphite-udp": "^1.0.0",
     "http-errors": "^1.3.1",
     "join-path": "^1.1.0",
     "koa-bunyan-logger": "^1.3.0",
     "lodash": "^3.10.1",
     "lru-cache": "^2.7.0",
+    "os-utils": "0.0.14",
     "raven": "^0.8.1",
     "request-promise": "^1.0.2",
     "socket.io-client": "^1.3.7"
