--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "supertest": "^1.1.0"
   },
   "dependencies": {
+    "bluebird": "^3.0.5",
     "bunyan": "^1.5.1",
     "bunyan-prettystream": "^0.1.3",
     "bunyan-raven": "^0.4.0",
