--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "join-path": "^1.1.0",
     "lodash": "4.6.0",
     "lru-cache": "^2.7.0",
+    "moment": "^2.10.6",
     "os-utils": "0.0.14",
     "raven": "^0.8.1",
     "redis": "^2.3.1",
