--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
   - nodejs_version: "4.3"
   - nodejs_version: "5.5"
   - nodejs_version: "5.6"
-  - nodejs_version: "5.7"
+  # - nodejs_version: "5.7"
 
 platform:
   - x86
@@ -12,10 +12,8 @@ platform:
 
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
-  # install modules
   - npm install
 
-# Post-install test scripts.
 test_script:
   # Output useful info for debugging.
   - node --version
