--- a/package.json
+++ b/package.json
@@ -24,19 +24,18 @@
   },
   "devDependencies": {
     "co-mocha": "^1.1.2",
-    "co-supertest": "0.0.10",
     "dotenv": "2.0.0",
     "istanbul": "^0.4.2",
-    "koa": "1.1.2",
+    "koa": "^1.1.2",
     "koa-better-body": "1.0.17",
     "mocha": "^2.3.4",
     "mockery": "^1.4.0",
     "nock": "^3.4.0",
     "should": "^8.2.1",
-    "supertest": "^1.1.0"
+    "supertest": "^2.0.0"
   },
   "dependencies": {
-    "bluebird": "^3.0.5",
+    "bluebird": "^3.4.1",
     "bunyan": "^1.5.1",
     "bunyan-prettystream": "^0.1.3",
     "bunyan-raven": "^0.4.0",
@@ -52,6 +51,7 @@
     "os-utils": "0.0.14",
     "raven": "^0.8.1",
     "redis": "^2.3.1",
+    "request": "^2.74.0",
     "request-promise": "^2.0.1",
     "socket.io-client": "^1.3.7",
     "sprintf-js": "^1.0.3",
