--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "request": "^2.74.0",
     "request-promise": "^2.0.1",
     "socket.io-client": "^1.3.7",
+    "socket.io-proxy": "^1.0.3",
     "sprintf-js": "^1.0.3",
     "uuid": "^2.0.1"
   }
