--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,13 @@
 language: node_js
 node_js:
-  - "4.2"
-  - "4.3"
-  - "5.5"
-  - "5.6"
-  - "5.7"
+  - "6"
+  - "7"
 
 before_script:
   - npm install -g coveralls
-  - npm install -g codacy-coverage
 
 script:
-  - npm run test-cov
+  - npm run test:coverage
 
 after_script:
   - cat ./coverage/lcov.info | coveralls
-  - cat ./coverage/lcov.info | codacy-coverage
