--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_script:
 script:
   - npm run test:coverage
 
-after_script:
-  - cat ./coverage/lcov.info | coveralls
+after_success:
+  - nyc report --reporter=text-lcov | coveralls
