--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^2.3.4",
     "mockery": "^1.4.0",
     "nock": "^3.4.0",
+    "nyc": "^10.3.2",
     "should": "^8.2.1",
     "socket.io-client": "^1.3.7",
     "supertest": "^2.0.0",
