--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,8 @@ script:
 
 after_success:
   - nyc report --reporter=text-lcov | coveralls
+
+notifications:
+  email:
+    on_success: never
+    on_failure: change
