--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pino": "^4.17.3",
     "raven": "^1.2.1",
     "redis": "^2.3.1",
+    "redis-sentinel": "^0.3.3",
     "request": "^2.74.0",
     "request-promise": "^4.2.2",
     "socket.io-client": "^2.1.1",
